iox_query/src/plan/snapshots/iox_query__plan__influxql__test__select_raw__single_measurement.snap
---
source: iox_query/src/plan/influxql.rs
expression: "plan(\"SELECT f64_field FROM data\")"
---
Projection: data.time, data.f64_field AS f64_field [time:Timestamp(Nanosecond, None), f64_field:Float64;N]
  TableScan: data [TIME:Boolean;N, bar:Dictionary(Int32, Utf8);N, bool_field:Boolean;N, f64_field:Float64;N, foo:Dictionary(Int32, Utf8);N, i64_field:Int64;N, mixedCase:Float64;N, str_field:Utf8;N, time:Timestamp(Nanosecond, None), with space:Float64;N]
